<resources>
    <string name="app_name">ExponentAndroid</string>
    <string name="title_activity_menu_activity">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_parcing_activity">MainActivity</string>
    <string name="cameras">Cameras</string>
    <string name="jps">JPS</string>
    <string name="car_info">Car info</string>
    <string name="about_us">About us</string>
    <string name="name">Name: </string>
    <string name="email">Email: </string>
    <string name="helpLabel">Help Number: </string>
    <string name="helpNumber">+38 066 123 45 67</string>
    <string name="number">Number: </string>
    <string name="sessions">Your Sessions </string>
    <string name="quit">Quit </string>
    <string name="components">Your Components </string>
    <string name="nameHint">Name </string>
    <string name="surnameHint">Surname</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="password2Hint">Re-enter password</string>
    <string name="registration">Registration</string>
    <string name="logIn">Log in</string>
    <string name="createAccount">New to car protector? Sign up</string>
    <string name="forgotPassword">Forgot your password? Get help signing in</string>
    <string name="carProtector">Car Protector</string>
    <string name="alarmOn">Turn on the alarm</string>
    <string name="alarmOff">Turn off the alarm</string>
    <string name="prices">Prices</string>
    <string name="order">Order</string>
    <string name="website">Website</string>

</resources>