<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"


    tools:context=".StartActivity">


    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="283dp"
        android:layout_height="40dp"
        android:background="@drawable/field"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:textColor="#88889a"
        android:textColorHint="#88889a"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/password_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="283dp"
        android:layout_height="40dp"
        android:background="@drawable/field"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textColor="#88889a"
        android:textColorHint="#88889a"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <Button
        android:id="@+id/registration_button"
        android:layout_width="283dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button"
        android:onClick="OnClickSignUp"
        android:text="@string/createAccount"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#ccc0d1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.392" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="283dp"
        android:layout_height="40dp"
        android:background="@drawable/button"
        android:onClick="OnClickSignIn"
        android:text="@string/logIn"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#ccc0d1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext"
        app:layout_constraintVertical_bias="0.057" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="348dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext"
        app:layout_constraintVertical_bias="0.398"
        app:srcCompat="@drawable/or_field" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="301dp"
        android:layout_height="62dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext"
        app:layout_constraintVertical_bias="0.063"
        app:srcCompat="@drawable/password_image" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="301dp"
        android:layout_height="62dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.292"
        app:srcCompat="@drawable/password_image" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnClickTest"
        android:text="Test"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="411dp"
        android:layout_height="359dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toTopOf="@+id/email_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassword"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/getHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getHelp"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>