<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:background="@color/colorBlack"
        android:text="line"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonComponents" />

    <Button
        android:id="@+id/buttonComponents"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:text="@string/components"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textSettringsNumber2"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="@string/language"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView18"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:background="@color/colorBlack"
        android:text="line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSettringsNumber2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/settingsEditNumber"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="28dp"
        android:background="@null"
        android:hint="YourNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textSettingsEmail"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />


    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:background="@color/colorBlack"
        android:text="line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsEditNumber" />

    <TextView
        android:id="@+id/textSettringsNumber"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginStart="12dp"
        android:gravity="center_vertical"
        android:text="@string/number"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView14"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="@string/email"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:background="@color/colorBlack"
        android:text="line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginStart="16dp"
        android:background="@color/colorBlack"
        android:text="line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsEditName" />

    <TextView
        android:id="@+id/textSettingsEmail"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="@string/email"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textSettringsName"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:text="@string/name"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/settingsEditName"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:hint="YourName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textSettringsName"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:background="@color/colorBlack"
        android:text="line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsEditName" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textSettringsNumber2"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="@string/helpLabel"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonComponents" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:background="@color/colorBlack"
        android:text="line"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:text="@string/quit"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:background="@color/colorBlack"
        android:text="line"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSessions" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:background="@color/colorBlack"
        android:text="line"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonQuit" />

    <Button
        android:id="@+id/buttonSessions"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:text="@string/sessions"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="40dp"
        android:gravity="center_vertical"
        android:text="@string/helpNumber"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/buttonComponents" />

    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />


</androidx.constraintlayout.widget.ConstraintLayout>